[gd_scene load_steps=11 format=3 uid="uid://cgc0m4cgbranp"]

[ext_resource type="Script" uid="uid://mrwgtlv2un7n" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/TopographyPanel/TopographyListItem/topography_list_item.gd" id="1_b6ea6"]
[ext_resource type="LabelSettings" uid="uid://oew3p1gg5ddw" path="res://Fonts/font_2_16_black.tres" id="1_faspr"]
[ext_resource type="FontFile" uid="uid://cf1pm48y6jlcm" path="res://Fonts/RasterForgeRegular-JpBgm.ttf" id="1_h1ygn"]
[ext_resource type="Material" uid="uid://dt5rnlt5lhsnj" path="res://Shader/Static.tres" id="2_nivl8"]
[ext_resource type="PackedScene" uid="uid://c7n7pxhkwpt0k" path="res://UI/SvgIcon/SVGIcon.tscn" id="3_upsur"]
[ext_resource type="PackedScene" uid="uid://b641lti6qidew" path="res://UI/EconItem/EconItem.tscn" id="4_ke7nn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1ygn"]
bg_color = Color(1, 0.74902, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_faspr"]

[sub_resource type="LabelSettings" id="LabelSettings_b6ea6"]
font = ExtResource("1_h1ygn")
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_upsur"]
font = ExtResource("1_h1ygn")
font_color = Color(0.400698, 0.400698, 0.400698, 1)
outline_color = Color(0, 0, 0, 0.615686)
shadow_size = 0
shadow_offset = Vector2(2, 2)

[node name="TopographyListItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 40)
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h1ygn")
script = ExtResource("1_b6ea6")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ImageRect" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
visible = false
material = ExtResource("2_nivl8")
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_faspr")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = -10

[node name="RoomIndex" type="Label" parent="MarginContainer2/HBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "1"
label_settings = SubResource("LabelSettings_b6ea6")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2

[node name="ActivatedIcon" parent="MarginContainer2/HBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("3_upsur")]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
icon_color = Color(0, 0.533928, 0.128771, 1)
icon_size = Vector2(30, 30)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0
alignment = 1

[node name="RoomName" type="Label" parent="MarginContainer2/HBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "ROOM NAME"
label_settings = ExtResource("1_faspr")
text_overrun_behavior = 1

[node name="RoomStatus" type="Label" parent="MarginContainer2/HBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "ROOM STATUS"
label_settings = SubResource("LabelSettings_upsur")
text_overrun_behavior = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
layout_mode = 2
text = "Energy"
label_settings = ExtResource("1_faspr")
horizontal_alignment = 1

[node name="StaffCountComponent" parent="MarginContainer2/HBoxContainer/HBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource("4_ke7nn")]
layout_mode = 2
size_flags_horizontal = 4
horizontal_mode = true
icon = 34
amount = 1
burn_val = "0"
icon_size = Vector2(20, 20)

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer2/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/HBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "HAZARDOUS"
label_settings = ExtResource("1_faspr")
horizontal_alignment = 2
